--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                 <br>
                 $$
                 \begin{align*}
-                dx_t = (\dot \alpha_t -\sigma_t^{-2} \alpha_t)\eta_0(\alpha_t,\beta_t,x_t) dt + \dot \beta_t
+                dx_t = (\dot \alpha_t -\sigma_t^{2} \alpha_t^{-1})\eta_0(\alpha_t,\beta_t,x_t) dt + \dot \beta_t
                 \eta_1(\alpha_t,\beta_t,x_t) dt + \sqrt{2} \sigma_t dW_t, \qquad x_0 \overset{d}{=}
                 I_{\alpha_0,\beta_0}\end{align*}
                 $$
