--- a/index.html
+++ b/index.html
@@ -621,9 +621,9 @@
                 <br>
                 $$
                 \begin{align*}
-                \eta_0(\alpha,\beta,x) = \mathop{\mathrm{arg min}}_{\hat \eta_0}
+                \eta_0(\alpha,\beta,x) = \mathop{\mathrm{arg min}}\limits_{\hat \eta_0}
                 \mathbb{E}_{x_0,x_1,\alpha,\beta}\big[|\hat \eta_0(\alpha,\beta,I_{\alpha,\beta})- x_0|^2\big], \\
-                \eta_1(\alpha,\beta,x) = \mathop{\mathrm{arg min}}_{\hat \eta_1}
+                \eta_1(\alpha,\beta,x) = \mathop{\mathrm{arg min}}\limits_{\hat \eta_1}
                 \mathbb{E}_{x_0,x_1,\alpha,\beta}\big[|\hat \eta_1(\alpha,\beta,I_{\alpha,\beta})- x_1|^2]
                 \end{align*}
                 $$
