--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     </div>
                 </div>
                 <hr
-                    style="border:1px solid black; background: black; border: none; margin-left: 40%; margin-right: 40%;;">
+                    style="border:1px solid black; background: black; border: none; margin-left: 40%; margin-right: 40%;">
                 <div class="has-text-centered"><b>Dataset: CelebA</b></div>
                 <div class="container has-text-centered" , style="margin-bottom: 5%">
                     <div class="imgContainer">
@@ -301,7 +301,7 @@
                 <!--/Inpainting. -->
             </div>
         </div>
-        <div class="columns is-centered is-max-desktop has-text-centered" style="margin-bottom: 5%">
+        <!-- <div class="columns is-centered is-max-desktop has-text-centered" style="margin-bottom: 5%">
             <div class="column is-four-fifths" style="justify-content: center">
                 <p>PSNR and SSIM metrics on CelebA and AFHQ-Cat datasets. A single generation was performed on each
                     image.</p>
@@ -404,7 +404,7 @@
                     very
                     same model is employed for both block and random inpainting.</p>
             </div>
-        </div>
+        </div> -->
         <div class="columns is-centered">
             <div class=" column is-four-fifths">
                 <p class="has-text-justified"> Multiple generations in a row on the
@@ -620,7 +620,7 @@
 
             Associated with this interpolant we introduce:
             </p>
-            <p style="background-color: #f0f8ff; padding: 1em; border-left: 4% solid #2970CC; margin: 1em 0;">
+            <p style="background-color: #f0f8ff; padding: 1em; border-left: 4px solid #2970CC; margin: 1em 0;">
                 <b>Denoiser drifts:</b>
                 <br>
                 $$
@@ -635,7 +635,7 @@
             <p>
                 These drifts can be used to perform inference along any path in $(\alpha,\beta)$-space using:
             </p>
-            <p style="background-color: #f0f8ff; padding: 1em; border-left: 4% solid #2970CC; margin: 1em 0;">
+            <p style="background-color: #f0f8ff; padding: 1em; border-left: 4px solid #2970CC; margin: 1em 0;">
                 <b>Probability flow ODE</b>
                 <br>
                 $$
