--- a/index.html
+++ b/index.html
@@ -474,10 +474,10 @@
 
             </div>
         </div>
-        <div class="arrow-container" , style="margin-bottom: 5%">
+        <!-- <div class="arrow-container" , style="margin-bottom: 5%">
             <div class="arrow"></div>
             <div class="text">Generation flow</div>
-        </div>
+        </div> -->
 
         <!-- Constrained planning. -->
         <div class="columns is-centered is-max-desktop">
