--- a/index.html
+++ b/index.html
@@ -585,8 +585,9 @@
 
                 <div class="container" style="margin-top: 5%; display: flex; justify-content: center;">
                     <figure style="text-align: center; flex: 1;">
-                        <img src="static/images/original.jpg" height="50%" width="50%">
-                        <figcaption>Original image</figcaption>
+                        <img src="static/images/original.jpg" height="50%" width="50%"
+                            style="transform: translateY(3%)">
+                        <figcaption style="margin-top: 3%">Original image</figcaption>
                     </figure>
                     <figure style="text-align: center; flex: 1;">
                         <video poster="" id="steve" autoplay controls muted loop playsinline height="50%" width="50%">
