--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 <!--/Inpainting. -->
             </div>
         </div>
-        <!-- <div class="columns is-centered is-max-desktop has-text-centered" style="margin-bottom: 5%">
+        <div class="columns is-centered is-max-desktop has-text-centered" style="margin-bottom: 5%">
             <div class="column is-four-fifths" style="justify-content: center">
                 <p>PSNR and SSIM metrics on CelebA and AFHQ-Cat datasets. A single generation was performed on each
                     image.</p>
@@ -403,7 +403,7 @@
                     very
                     same model is employed for both block and random inpainting.</p>
             </div>
-        </div> -->
+        </div>
         <div class="columns is-centered">
             <div class=" column is-four-fifths">
                 <p class="has-text-justified">
