--- a/index.html
+++ b/index.html
@@ -399,13 +399,16 @@
                     </tbody>
                 </table>
             </div>
-            <p class="column has-text-justified">Of all the inpainting benchmarks, multitask stochastic
-                interpolants perform best while offering great flexibility, both on PSNR and SSIM metrics. The
-                very
-                same model is employed for both block and random inpainting.</p>
         </div>
+
         <div class="columns is-centered">
             <div class=" column is-four-fifths">
+                <p class="has-text-justified" style="margin-bottom: 5%">Of all the inpainting benchmarks, multitask
+                    stochastic
+                    interpolants perform best while offering great flexibility, both on PSNR and SSIM metrics. The
+                    very
+                    same model is employed for both block and random inpainting.</p>
+
                 <p class="has-text-justified">
                     Multiple generations in a row on the
                     same image without significantly deviating from the original image, see below. The eyes and
