--- a/index.html
+++ b/index.html
@@ -300,9 +300,12 @@
                 <!--/Inpainting. -->
             </div>
         </div>
-        <div class="columns is-centered is-max-desktop has-text-centered" style="margin-bottom: 5%">
-            <p>PSNR and SSIM metrics on CelebA and AFHQ-Cat datasets. A single generation was performed on each
-                image.</p>
+        <div class="columns is-centered">
+            <p class="column is-four-fifths" style="text-align: center;">PSNR and SSIM metrics on CelebA and AFHQ-Cat
+                datasets. A single generation was performed on each image.</p>
+        </div>
+
+        <div class=" columns is-centered is-max-desktop has-text-centered" style="margin-bottom: 5%">
 
             <div class="column is-four-fifths"
                 style="justify-content: center; max-width: 100%; box-sizing: border-box; overflow-x: auto;">
@@ -400,11 +403,14 @@
                     </tbody>
                 </table>
             </div>
-            <p class="column has-text-justified">Of all the inpainting benchmarks, multitask stochastic
-                interpolants perform best while offering great flexibility, both on PSNR and SSIM metrics. The
-                very
-                same model is employed for both block and random inpainting.</p>
         </div>
+
+        <div class="columns is-centered">
+            <p class="column is-four-fifths" style="text-align: center;">Of all the inpainting benchmarks, multitask
+                stochastic interpolants perform best while offering great flexibility, both on PSNR and SSIM metrics.
+                The very same model is employed for both block and random inpainting.</p>
+        </div>
+
         <div class="columns is-centered">
             <div class=" column is-four-fifths">
                 <p class="has-text-justified">
